--- a/package.json
+++ b/package.json
@@ -10,17 +10,21 @@
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "^3.0.0-beta.0",
     "@angular/animations": "^16.2.0",
     "@angular/cdk": "^17.1.2",
     "@angular/common": "^16.2.0",
     "@angular/compiler": "^16.2.0",
     "@angular/core": "^16.2.0",
-    "@angular/forms": "^16.2.0",
+    "@angular/forms": "^16.2.12",
+    "@angular/google-maps": "^17.1.2",
+    "@angular/material": "^17.1.2",
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.3",
+    "intl-tel-input": "^19.2.16",
     "jquery": "^3.7.1",
     "magnific-popup": "^1.1.0",
     "popper.js": "^1.16.1",
@@ -32,6 +36,7 @@
     "@angular-devkit/build-angular": "^16.2.10",
     "@angular/cli": "^16.2.10",
     "@angular/compiler-cli": "^16.2.0",
+    "@types/intl-tel-input": "^18.1.4",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
