--- a/package.json
+++ b/package.json
@@ -26,9 +26,12 @@
     "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.3",
+    "google-libphonenumber": "^3.2.34",
     "intl-tel-input": "^19.2.16",
     "jquery": "^3.7.1",
     "magnific-popup": "^1.1.0",
+    "ngx-bootstrap": "^12.0.0",
+    "ngx-intl-tel-input": "^3.2.0",
     "popper.js": "^1.16.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
