--- a/angular.json
+++ b/angular.json
@@ -25,24 +25,22 @@
               "src/assets"
             ],
             "styles": [
-              "@angular/material/prebuilt-themes/pink-bluegrey.css",
               "src/styles.css",
               "src/assets/css/styles.css",
               "src/assets/css/plugins.css",
               "src/assets/search/search.css",
               "src/assets/quform/css/base.css",
               "node_modules/bootstrap-icons/font/bootstrap-icons.css",
-              "node_modules/bootstrap/scss/bootstrap.scss",
-              "src/assets/css/style.css"
+              "node_modules/bootstrap/scss/bootstrap.scss"
 
               
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
               "node_modules/popper.js/dist/umd/popper.min.js",
-              "src/assets/js/script.js",
               "src/assets/js/bootstrap.min.js",
               "src/assets/js/jquery.min.js",
+              "src/assets/js/script.js",
               "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
               "src/assets/js/main.js",
               "src/assets/js/core.min.js",
