--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "ngx-intl-tel-input": "^3.2.0",
     "popper.js": "^1.16.1",
     "rxjs": "~7.8.0",
+    "tailwindcss": "^3.4.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
