--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "google-libphonenumber": "^3.2.34",
     "intl-tel-input": "^19.2.16",
     "jquery": "^3.7.1",
+    "leaflet": "^1.9.4",
+    "leaflet-routing-machine": "^3.2.12",
     "magnific-popup": "^1.1.0",
     "ngx-bootstrap": "^12.0.0",
     "ngx-intl-tel-input": "^3.2.0",
@@ -43,6 +45,8 @@
     "@angular/compiler-cli": "^16.2.0",
     "@types/intl-tel-input": "^18.1.4",
     "@types/jasmine": "~4.3.0",
+    "@types/leaflet": "^1.9.8",
+    "@types/leaflet-routing-machine": "^3.2.8",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
