--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "private": true,
   "dependencies": {
     "@agm/core": "^3.0.0-beta.0",
-    "@angular/animations": "^16.2.0",
+    "@angular/animations": "^16.2.12",
     "@angular/cdk": "^17.1.2",
     "@angular/common": "^16.2.0",
     "@angular/compiler": "^16.2.0",
@@ -33,7 +33,7 @@
     "ngx-bootstrap": "^12.0.0",
     "ngx-intl-tel-input": "^3.2.0",
     "popper.js": "^1.16.1",
-    "rxjs": "~7.8.0",
+    "rxjs": "^7.8.0",
     "tailwindcss": "^3.4.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
