--- a/package.json
+++ b/package.json
@@ -21,19 +21,23 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@fortawesome/fontawesome-free": "^6.5.1",
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.3",
+    "font-awesome": "^4.7.0",
     "google-libphonenumber": "^3.2.34",
     "intl-tel-input": "^19.2.16",
     "jquery": "^3.7.1",
     "leaflet": "^1.9.4",
     "leaflet-routing-machine": "^3.2.12",
+    "lottie-web": "^5.12.2",
     "magnific-popup": "^1.1.0",
     "ngx-bootstrap": "^12.0.0",
     "ngx-intl-tel-input": "^3.2.0",
+    "ngx-lottie": "^10.0.0",
     "popper.js": "^1.16.1",
     "rxjs": "^7.8.0",
     "tailwindcss": "^3.4.1",
