--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "ngx-lottie": "^10.0.0",
     "popper.js": "^1.16.1",
     "rxjs": "^7.8.0",
+    "sweetalert2": "^11.10.5",
     "tailwindcss": "^3.4.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
