--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "leaflet-routing-machine": "^3.2.12",
     "lottie-web": "^5.12.2",
     "magnific-popup": "^1.1.0",
+    "ng-recaptcha": "^13.2.1",
     "ngx-bootstrap": "^12.0.0",
+    "ngx-captcha": "^13.0.0",
     "ngx-intl-tel-input": "^3.2.0",
     "ngx-lottie": "^10.0.0",
     "popper.js": "^1.16.1",
