--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
     "@fortawesome/fontawesome-free": "^6.5.2",
+    "@google-cloud/vision": "^4.2.1",
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
     "angularx-qrcode": "^17.0.0",
@@ -32,6 +33,7 @@
     "google-libphonenumber": "^3.2.34",
     "intl-tel-input": "^19.2.16",
     "jquery": "^3.7.1",
+    "jspdf": "^2.5.1",
     "leaflet": "^1.9.4",
     "leaflet-routing-machine": "^3.2.12",
     "lottie-web": "^5.12.2",
