--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "stepper-progress-bar": "^0.0.8",
     "sweetalert2": "^11.10.5",
     "tailwindcss": "^3.4.1",
+    "tesseract.js": "^5.1.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
@@ -61,6 +62,7 @@
     "@types/jasmine": "~4.3.0",
     "@types/leaflet": "^1.9.8",
     "@types/leaflet-routing-machine": "^3.2.8",
+    "@types/node": "^20.12.12",
     "@types/qrcode": "^1.5.5",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
