--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
     "angularx-qrcode": "^17.0.0",
+    "autoprefixer": "^10.4.19",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.3",
@@ -45,11 +46,12 @@
     "ngx-intl-tel-input": "^3.2.0",
     "ngx-lottie": "^10.0.0",
     "ngx-scanner-qrcode": "^1.6.9",
+    "pdf-lib": "^1.17.1",
     "popper.js": "^1.16.1",
+    "postcss": "^8.4.38",
     "rxjs": "^7.8.0",
     "stepper-progress-bar": "^0.0.8",
     "sweetalert2": "^11.10.5",
-    "tailwindcss": "^3.4.1",
     "tesseract.js": "^5.1.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
@@ -70,6 +72,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "tailwindcss": "^3.4.3",
     "typescript": "~5.1.3"
   }
 }
