--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "@google-cloud/vision": "^4.2.1",
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
+    "@stomp/stompjs": "^7.0.0",
+    "@types/sockjs-client": "^1.5.4",
+    "@types/stompjs": "^2.3.9",
     "angularx-qrcode": "^17.0.0",
     "autoprefixer": "^10.4.19",
     "axios": "^1.6.7",
@@ -39,6 +42,7 @@
     "leaflet-routing-machine": "^3.2.12",
     "lottie-web": "^5.12.2",
     "magnific-popup": "^1.1.0",
+    "net": "^1.0.2",
     "ng-recaptcha": "^13.2.1",
     "ng-webcam": "^1.0.0",
     "ngx-bootstrap": "^12.0.0",
@@ -50,7 +54,9 @@
     "popper.js": "^1.16.1",
     "postcss": "^8.4.38",
     "rxjs": "^7.8.0",
+    "sockjs-client": "^1.6.1",
     "stepper-progress-bar": "^0.0.8",
+    "stompjs": "^2.3.3",
     "sweetalert2": "^11.10.5",
     "tesseract.js": "^5.1.0",
     "tslib": "^2.3.0",
